--- a/public/verify.html
+++ b/public/verify.html
@@ -61,7 +61,7 @@
 
   <div id="result">
     <div class="notary-header">
-      <h1>ARCHANA PANDEY</h1>
+      <h1>Archana Pandav</h1>
       <p>Notary Public, Government of India</p>
       <p>N.J House, Cabin B, Hiralal Chotelal compound, Bhaji Market, Old Station Road, Kalyan (West), Thane – 421301</p>
       <p>Email: pandavarchana77@gmail.com | Phone: +91 9220574357</p>
@@ -191,4 +191,5 @@
   </script>
 </body>
 </html>
+
 
