--- a/public/verify.html
+++ b/public/verify.html
@@ -49,7 +49,7 @@
    <div class="top-bar">
     <a href="index.html" class="home-btn">Home</a>
   </div> 
-  <h2>Verify Sale Deed</h2>
+  <h2>Verify Document</h2>
   <div id="flashMessage" class="flash-msg">❌ No matching record found.</div>
   <form onsubmit="verifyRecord(event)">
     <label>Notary Registered Sr. No.:</label>
@@ -191,6 +191,7 @@
   </script>
 </body>
 </html>
+
 
 
 
