--- a/public/verify.html
+++ b/public/verify.html
@@ -24,6 +24,7 @@
              border:none; width:100%; border-radius:4px; cursor:pointer; }
     #result { display:none; max-width:960px; margin:0 auto; background:#fff;
               padding:20px; border:1px solid #000; border-radius:6px; }
+    .inspector-line { text-align:center; font-weight:700; margin-bottom:10px; }
     .notary-header { text-align:center; margin-bottom:20px; }
     .notary-header h1 { margin:0; font-size:24px; }
     .notary-header p { margin:4px 0; font-size:14px; }
@@ -46,11 +47,13 @@
 </head>
 <body>
 
-   <div class="top-bar">
+  <div class="top-bar">
     <a href="index.html" class="home-btn">Home</a>
-  </div> 
+  </div>
   <h2>Verify Document</h2>
+
   <div id="flashMessage" class="flash-msg">❌ No matching record found.</div>
+
   <form onsubmit="verifyRecord(event)">
     <label>Notary Registered Sr. No.:</label>
     <input type="text" id="notarySrNo" required/>
@@ -60,62 +63,85 @@
   </form>
 
   <div id="result">
+    <!-- NEW: Bold line at top -->
+    <div id="inspectorTop" class="inspector-line"><strong>In the name of Archana Pandav</strong></div>
+
     <div class="notary-header">
       <h1>Archana Pandav</h1>
       <p>Notary Public, Government of India</p>
       <p>N.J House, Cabin B, Hiralal Chotelal compound, Bhaji Market, Old Station Road, Kalyan (West), Thane – 421301</p>
       <p>Email: pandavarchana77@gmail.com | Phone: +91 9220574357</p>
     </div>
+
     <div class="meta-info">
       <div><strong>Serial Number:</strong> <span id="z_srno"></span></div>
       <div><strong>Document Number:</strong> <span id="z_docno"></span></div>
       <div><strong>Type of Document:</strong> <span id="z_docType"></span></div>
     </div>
+
+    <!-- Parties table -->
     <table class="exec-table">
       <thead>
         <tr>
-          <th style="width:35%">Executing Parties: Purchaser</th>
+          <th style="width:35%" id="th_purchaser">Executing Parties: Purchaser</th>
           <th style="width:20%">Digital Photo</th>
           <th style="width:20%">Thumb Impression</th>
           <th style="width:25%">Signature</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody id="tbody_purchaser">
+        <!-- Main purchaser row (original IDs kept) -->
         <tr>
           <td id="z_purchaser"></td>
           <td><img id="z_photoP" width="200"></td>
           <td><img id="z_thumbP" width="100"></td>
           <td><div class="sig-box"></div></td>
         </tr>
-         <tr>
-          <th style="width:35%">Executing Parties: Seller</th>
-          <th style="width:20%">Digital Photo</th>
-          <th style="width:20%">Thumb Impression</th>
-          <th style="width:25%">Signature</th>
+        <!-- Extra purchaser rows will be appended here -->
+      </tbody>
+
+      <!-- Seller section -->
+      <thead>
+        <tr>
+          <th id="th_seller">Executing Parties: Seller</th>
+          <th>Digital Photo</th>
+          <th>Thumb Impression</th>
+          <th>Signature</th>
         </tr>
+      </thead>
+      <tbody id="tbody_seller">
         <tr>
           <td id="z_seller"></td>
           <td><img id="z_photoS" width="200"></td>
           <td><img id="z_thumbS" width="100"></td>
           <td><div class="sig-box"></div></td>
         </tr>
+        <!-- Extra seller rows will be appended here -->
+      </tbody>
+
+      <!-- Witness section -->
+      <thead>
         <tr>
-          <th style="width:25%">SIGNED AND EXECUTED BY ABOVE PARTIES IN PRESENCE OF: </th>
+          <th colspan="4" style="width:25%">SIGNED AND EXECUTED BY ABOVE PARTIES IN PRESENCE OF:</th>
         </tr>
         <tr>
-          <th style="width:35%">Executing Parties: Witness 1</th>
-          <th style="width:20%">Digital Photo</th>
-          <th style="width:20%">Thumb Impression</th>
-          <th style="width:25%">Signature</th>
+          <th id="th_witness">Executing Parties: Witness</th>
+          <th>Digital Photo</th>
+          <th>Thumb Impression</th>
+          <th>Signature</th>
         </tr>
+      </thead>
+      <tbody id="tbody_witness">
         <tr>
           <td id="z_witness"></td>
           <td><img id="z_photoW" width="200"></td>
           <td><img id="z_thumbW" width="100"></td>
           <td><div class="sig-box"></div></td>
         </tr>
+        <!-- Extra witness rows will be appended here -->
       </tbody>
     </table>
+
     <div class="contents"><strong>CONTENTS OF THE DOCUMENT MENTIONED THEREIN:</strong> <span id="z_contents"></span></div>
     <div class="schedule"><strong>SCHEDULE OF PROPERTY:</strong> <span id="z_schedule"></span></div>
     <div class="consideration"><strong>CONSIDERATION OF PROPERTY:</strong> <span id="z_consideration"></span></div>
@@ -123,6 +149,30 @@
   </div>
 
   <script>
+    function partyHTML(r, keys, labels){
+      return keys.map((k,i)=>`<div><strong>${labels[i]}:</strong> ${r[k]||'—'}</div>`).join('');
+    }
+
+    function extraRowHTML(person){
+      const details = [
+        ['Name','name'],
+        ['Age','age'],
+        ['Occupation','occupation'],
+        ['Residing At','address'],
+        ['Contact No.','contact'],
+        ['Identification','idnumber'],
+      ].map(([label,key]) => `<div><strong>${label}:</strong> ${person?.[key] || '—'}</div>`).join('');
+      const photo = person?.photo ? `<img src="${person.photo}" width="200">` : '';
+      const thumb = person?.thumb ? `<img src="${person.thumb}" width="100">` : '';
+      return `
+        <tr>
+          <td>${details}</td>
+          <td>${photo}</td>
+          <td>${thumb}</td>
+          <td><div class="sig-box"></div></td>
+        </tr>`;
+    }
+
     async function verifyRecord(e){
       e.preventDefault();
       const sr=document.getElementById('notarySrNo').value.trim();
@@ -130,6 +180,7 @@
       const flash=document.getElementById('flashMessage');
       const result=document.getElementById('result');
       flash.style.display=result.style.display='none';
+
       try{
         const recs=await (await fetch('/get-users')).json();
         const r=recs.find(u=>u.metaNotarySrNo===sr&&u.metaDocumentNumber===dn);
@@ -138,42 +189,69 @@
           flash.style.display='block';
           return;
         }
-        // fill metadata
-        document.getElementById('z_srno').innerText=r.metaNotarySrNo;
-        document.getElementById('z_docno').innerText=r.metaDocumentNumber;
-        document.getElementById('z_docType').innerText=r.metaDocumentType;
-        // party helper
-        const fillParty=(p,klist,labels)=>{
-          return klist.map((k,i)=>`<div><strong>${labels[i]}:</strong> ${r[k]||'—'}</div>`).join('');
-        };
-        // purchaser
-        document.getElementById('z_purchaser').innerHTML=
-          fillParty('purchaser',
-            ['purchaserName','purchaserAge','purchaserOccupation','purchaserAddress','purchaserContact','purchaserIdNumber'],
-            ['Name','Age','Occupation','Residing At','Contact No.','Identification']
-          );
+
+        // Top inspector line
+        const inspector = (r.inspector_name || 'Archana Pandav').trim();
+        document.getElementById('inspectorTop').innerHTML = `<strong>In the name of ${inspector}</strong>`;
+
+        // Meta
+        document.getElementById('z_srno').innerText=r.metaNotarySrNo||'';
+        document.getElementById('z_docno').innerText=r.metaDocumentNumber||'';
+        document.getElementById('z_docType').innerText=r.metaDocumentType||'';
+
+        // Column headings from types
+        const tPurch = (r.purchaserType||'Purchaser').trim() || 'Purchaser';
+        const tSeller = (r.sellerType||'Seller').trim() || 'Seller';
+        const tWitness= (r.witnessType||'Witness').trim()|| 'Witness';
+
+        document.getElementById('th_purchaser').textContent = `Executing Parties: ${tPurch}`;
+        document.getElementById('th_seller').textContent    = `Executing Parties: ${tSeller}`;
+        document.getElementById('th_witness').textContent   = `Executing Parties: ${tWitness}`;
+
+        // Main rows (keep original IDs)
+        document.getElementById('z_purchaser').innerHTML = partyHTML(r,
+          ['purchaserName','purchaserAge','purchaserOccupation','purchaserAddress','purchaserContact','purchaserIdNumber'],
+          ['Name','Age','Occupation','Residing At','Contact No.','Identification']
+        );
         document.getElementById('z_photoP').src=r.photoP||'';
         document.getElementById('z_thumbP').src=r.thumbP||'';
-        // seller
-        document.getElementById('z_seller').innerHTML=
-          fillParty('seller',
-            ['sellerName','sellerAge','sellerOccupation','sellerAddress','sellerContact','sellerIdNumber'],
-            ['Name','Age','Occupation','Residing At','Contact No.','Identification']
-          );
+
+        document.getElementById('z_seller').innerHTML = partyHTML(r,
+          ['sellerName','sellerAge','sellerOccupation','sellerAddress','sellerContact','sellerIdNumber'],
+          ['Name','Age','Occupation','Residing At','Contact No.','Identification']
+        );
         document.getElementById('z_photoS').src=r.photoS||'';
         document.getElementById('z_thumbS').src=r.thumbS||'';
-        // witness
-        document.getElementById('z_witness').innerHTML=
-          fillParty('witness',
-            ['witnessName','witnessAge','witnessOccupation','witnessAddress','witnessContact','witnessIdNumber'],
-            ['Name','Age','Occupation','Residing At','Contact No.','Identification']
-          );
+
+        document.getElementById('z_witness').innerHTML = partyHTML(r,
+          ['witnessName','witnessAge','witnessOccupation','witnessAddress','witnessContact','witnessIdNumber'],
+          ['Name','Age','Occupation','Residing At','Contact No.','Identification']
+        );
         document.getElementById('z_photoW').src=r.photoW||'';
         document.getElementById('z_thumbW').src=r.thumbW||'';
-        // footers
-        document.getElementById('z_contents').innerText=r.metaDocumentType;
-        document.getElementById('z_schedule').innerText=r.scheduleOfProperty;
-        document.getElementById('z_consideration').innerText=r.consideration;
+
+        // Clear old extra rows (if any) then append new
+        ['purchaser','seller','witness'].forEach(key=>{
+          const tb = document.getElementById(`tbody_${key}`);
+          // keep the first row (main) only; remove any others
+          while (tb.rows.length > 1) tb.deleteRow(-1);
+        });
+
+        (r.purchaserExtra||[]).forEach(p=>{
+          document.getElementById('tbody_purchaser').insertAdjacentHTML('beforeend', extraRowHTML(p));
+        });
+        (r.sellerExtra||[]).forEach(p=>{
+          document.getElementById('tbody_seller').insertAdjacentHTML('beforeend', extraRowHTML(p));
+        });
+        (r.witnessExtra||[]).forEach(p=>{
+          document.getElementById('tbody_witness').insertAdjacentHTML('beforeend', extraRowHTML(p));
+        });
+
+        // Footers
+        document.getElementById('z_contents').innerText=r.metaDocumentType||'';
+        document.getElementById('z_schedule').innerText=r.scheduleOfProperty||'';
+        document.getElementById('z_consideration').innerText=r.consideration||'';
+
         result.style.display='block';
       }catch(err){
         console.error(err);
@@ -181,6 +259,7 @@
         flash.style.display='block';
       }
     }
+
     function printRecord(){
       const orig=document.body.innerHTML;
       document.body.innerHTML=document.getElementById('result').outerHTML;
@@ -191,7 +270,3 @@
   </script>
 </body>
 </html>
-
-
-
-
