--- a/public/verify.html
+++ b/public/verify.html
@@ -24,7 +24,7 @@
              border:none; width:100%; border-radius:4px; cursor:pointer; }
     #result { display:none; max-width:960px; margin:0 auto; background:#fff;
               padding:20px; border:1px solid #000; border-radius:6px; }
-    .inspector-line { text-align:center; font-weight:700; margin-bottom:10px; }
+    .inspector-line { text-align:center; font-weight:700; font-size:34px; margin-bottom:10px; }
     .notary-header { text-align:center; margin-bottom:20px; }
     .notary-header h1 { margin:0; font-size:24px; }
     .notary-header p { margin:4px 0; font-size:14px; }
@@ -64,10 +64,10 @@
 
   <div id="result">
     <!-- NEW: Bold line at top -->
-    <div id="inspectorTop" class="inspector-line"><strong>In the name of Archana Pandav</strong></div>
+    <div id="inspectorTop" class="inspector-line"><strong>Notary Authorized Adv. </strong></div>
 
     <div class="notary-header">
-      <h1>Archana Pandav</h1>
+
       <p>Notary Public, Government of India</p>
       <p>N.J House, Cabin B, Hiralal Chotelal compound, Bhaji Market, Old Station Road, Kalyan (West), Thane – 421301</p>
       <p>Email: pandavarchana77@gmail.com | Phone: +91 9220574357</p>
@@ -270,3 +270,4 @@
   </script>
 </body>
 </html>
+
