--- a/public/verify.html
+++ b/public/verify.html
@@ -65,7 +65,7 @@
   <div id="result">
     <!-- TOP LINE -->
     <div id="inspectorTop" class="inspector-line">
-      <strong>Notary Authorized Adv. </strong>
+      <strong>Notary Authorized </strong>
     </div>
 
     <div class="notary-header">
@@ -264,3 +264,4 @@
   </script>
 </body>
 </html>
+
